@@ -324,6 +324,8 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		Device and Simulator behaves identically with premultiplied images. patch.
 	* Musical Geometry:
 		Improved SpriteSheet doxygen documentation (patch)
+    * mzornek:
+        ProgressTimer: setPercentage no longer has underflow (patch)
 	* nash8114:
 		Sprite#isFrameDisplayed works ok with offsets. patch.
 		GLES-DebugDraw#drawCircle draws non-solid circles. patch.
